--- a/index.html
+++ b/index.html
@@ -16,8 +16,25 @@
       </a>
       <nav class="main-navigation">
         <ul class="navigation-list site-navigation reset-list">
-          <li class="navigation-item ">
-            <a class="navigation-link" href="catalog.html">Каталог</a>
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-catalog" href="catalog.html">Каталог</a>
+            <div class="modal-navigation-catalog">
+              <span class="modal-navigation-catalog-text">Новинки</span>
+              <ul class="modal-navigation-catalog-list reset-list">
+                <li class="modal-navigation-catalog-item">
+                  <a class="modal-catalog-link" href="#">Сливочное</a>
+                </li>
+                <li class="modal-navigation-catalog-item">
+                  <a class="modal-catalog-link" href="#">Щербеты</a>
+                </li>
+                <li class="modal-navigation-catalog-item">
+                  <a class="modal-catalog-link" href="#">Фруктовый лед</a>
+                </li>
+                <li class="modal-navigation-catalog-item">
+                  <a class="modal-catalog-link" href="#">Мелорин</a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">Доставка и оплата</a>
@@ -29,21 +46,45 @@
         <a class="phone" href="tel:+78005558628">+7 800 555-86-28</a>
         <ul class="navigation-list user-navigation reset-list">
           <li class="navigation-item navigation-item-user">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-link-search" href="#">
               <span class="visually-hidden">
                 Поиск
               </span>
             </a>
+            <div class="modal-search modal">
+              <label class="visually-hidden" for="search-to-site">Search</label>
+              <input class="field" placeholder="Поиск по сайту" type="search" name="search" id="search-to-site">
+            </div>
           </li>
           <li class="navigation-item navigation-item-user">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-link-in" href="#">
               <span class="main-navigation-in">
                 Вход
               </span>
             </a>
+            <div class="modal-in-form modal">
+              <form class="in-form-wrap" action="https://echo.htmlacademy.ru/" method="POST">
+                <span class="modal-in-text presents-item-title">Личный кабинет</span>
+                <p class="modal-in-mailing ">
+                  <label class="visually-hidden" for="mailing-email">Email</label>
+                  <input class="field" placeholder="email@example.com" type="email" name="email" id="mailing-email"
+                    required>
+                </p>
+                <p class="modal-in-mailing">
+                  <label class="visually-hidden" for="password">Password</label>
+                  <input class="field" placeholder="" type="password" name="password" id="password" required>
+                </p>
+                <span class="button-pink-wrap link-form-wrap"><button class="link-form button button-pink"
+                    type="submit"><span>Войти</span></button></span>
+              </form>
+              <div class="in-form-hints">
+                <a class="hints" href="#"><span class="hints-text">Забыли пароль?</span></a>
+                <a class="hints" href="#"><span class="hints-text">Регистрация</span></a>
+              </div>
+            </div>
           </li>
           <li class="navigation-item navigation-item-user">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-link-basket" href="#">
               <svg class="navigation-link-cart" aria-hidden="true" focusable="false" width="17" height="16" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -53,35 +94,12 @@
                 Пусто
               </span>
             </a>
+            <div class="modal-basket-index modal">
+              <span class="modal-basket-text presents-item-title">Ваша корзина пока пуста</span>
+            </div>
           </li>
         </ul>
       </nav>
-      <div class="modal-search modal">
-        <label class="visually-hidden" for="search-to-site">Search</label>
-        <input class="field" placeholder="Поиск по сайту" type="search" name="search" id="search-to-site">
-      </div>
-      <div class="modal-in-form modal">
-        <form class="in-form-wrap" action="https://echo.htmlacademy.ru/" method="POST">
-          <span class="modal-in-text presents-item-title">Личный кабинет</span>
-          <p class="modal-in-mailing ">
-            <label class="visually-hidden" for="mailing-email">Email</label>
-            <input class="field" placeholder="email@example.com" type="email" name="email" id="mailing-email" required>
-          </p>
-          <p class="modal-in-mailing">
-            <label class="visually-hidden" for="password">Password</label>
-            <input class="field" placeholder="" type="password" name="password" id="password" required>
-          </p>
-          <span class="button-pink-wrap link-form-wrap"><button class="link-form button button-pink"
-              type="submit"><span>Войти</span></button></span>
-        </form>
-        <div class="in-form-hints">
-          <a class="hints" href="#"><span class="hints-text">Забыли пароль?</span></a>
-          <a class="hints" href="#"><span class="hints-text">Регистрация</span></a>
-        </div>
-      </div>
-      <div class="modal-basket-index modal">
-        <span class="modal-basket-text presents-item-title">Ваша корзина пока пуста</span>
-      </div>
     </header>
     <main class="main-container">
       <section class="promo">
@@ -281,13 +299,12 @@
               <p>Сливочное мороженое с малиновым джемом</p>
               <b class="text-norm">310 ₽/кг</b>
               <button class="assortment-button" type="button">
-                <svg aria-hidden="true" focusable="false" width="32" height="32" fill="none"
+                <svg aria-hidden="true" focusable="false" width="17" height="16" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0 16C0 7.1634 7.1634 0 16 0s16 7.1634 16 16-7.1634 16-16 16S0 24.8366 0 16z"
-                    fill="#FF2F64" />
                   <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M9.1667 9.25a.6667.6667 0 0 0 0 1.3333h1.7712l.4675 2.3354a.656.656 0 0 0 .0106.0531l.9674 4.8334.0001.0005a1.8255 1.8255 0 0 0 1.8183 1.4691h5.6207a1.8256 1.8256 0 0 0 1.8185-1.4696l.001-.005.9271-4.8615a.6668.6668 0 0 0-.6549-.7915h-9.3035l-.4726-2.3614a.6667.6667 0 0 0-.6537-.5358H9.1667zm4.5243 8.2944l-.8134-4.0639h8.2308l-.7756 4.0669a.4922.4922 0 0 1-.4918.3942v-.0001H14.1961v-.0001l-.0127.0002a.4926.4926 0 0 1-.4922-.3962l-.0002-.001zm-1.1336 3.961c0-.6879.5577-1.2457 1.2457-1.2457.6879 0 1.2457.5578 1.2457 1.2457 0 .688-.5578 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457zm6.3733 0c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457z"
-                    fill="#FCFCFC" /></svg>
+                    d="M1.313.49a.667.667 0 0 0 0 1.333h2.06l.54 2.696a.662.662 0 0 0 .011.056l1.09 5.44a1.97 1.97 0 0 0 1.962 1.586h6.325a1.97 1.97 0 0 0 1.963-1.586l.001-.005 1.043-5.47a.667.667 0 0 0-.655-.791H5.12l-.545-2.724A.667.667 0 0 0 3.92.49H1.313zM6.32 9.754l-.935-4.672h9.462l-.892 4.675a.637.637 0 0 1-.636.51H6.958a.637.637 0 0 1-.637-.512v-.001zm-1.11 4.44a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0zm7.17 0a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0z"
+                    fill="#2D3440" /></svg>
+                <span class="visually-hidden">Положить в корзину</span>
               </button>
             </div>
           </li>
@@ -299,13 +316,12 @@
               <p>Фисташковый пломбир с кусочками шоколада</p>
               <b class="text-norm">340 ₽/кг</b>
               <button class="assortment-button" type="button">
-                <svg aria-hidden="true" focusable="false" width="32" height="32" fill="none"
+                <svg aria-hidden="true" focusable="false" width="17" height="16" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0 16C0 7.1634 7.1634 0 16 0s16 7.1634 16 16-7.1634 16-16 16S0 24.8366 0 16z"
-                    fill="#FF2F64" />
                   <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M9.1667 9.25a.6667.6667 0 0 0 0 1.3333h1.7712l.4675 2.3354a.656.656 0 0 0 .0106.0531l.9674 4.8334.0001.0005a1.8255 1.8255 0 0 0 1.8183 1.4691h5.6207a1.8256 1.8256 0 0 0 1.8185-1.4696l.001-.005.9271-4.8615a.6668.6668 0 0 0-.6549-.7915h-9.3035l-.4726-2.3614a.6667.6667 0 0 0-.6537-.5358H9.1667zm4.5243 8.2944l-.8134-4.0639h8.2308l-.7756 4.0669a.4922.4922 0 0 1-.4918.3942v-.0001H14.1961v-.0001l-.0127.0002a.4926.4926 0 0 1-.4922-.3962l-.0002-.001zm-1.1336 3.961c0-.6879.5577-1.2457 1.2457-1.2457.6879 0 1.2457.5578 1.2457 1.2457 0 .688-.5578 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457zm6.3733 0c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457z"
-                    fill="#FCFCFC" /></svg>
+                    d="M1.313.49a.667.667 0 0 0 0 1.333h2.06l.54 2.696a.662.662 0 0 0 .011.056l1.09 5.44a1.97 1.97 0 0 0 1.962 1.586h6.325a1.97 1.97 0 0 0 1.963-1.586l.001-.005 1.043-5.47a.667.667 0 0 0-.655-.791H5.12l-.545-2.724A.667.667 0 0 0 3.92.49H1.313zM6.32 9.754l-.935-4.672h9.462l-.892 4.675a.637.637 0 0 1-.636.51H6.958a.637.637 0 0 1-.637-.512v-.001zm-1.11 4.44a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0zm7.17 0a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0z"
+                    fill="#2D3440" /></svg>
+                <span class="visually-hidden">Положить в корзину</span>
               </button>
             </div>
           </li>
@@ -317,13 +333,12 @@
               <p>Крем-брюле с черничным джемом</p>
               <b class="text-norm">330 ₽/кг</b>
               <button class="assortment-button" type="button">
-                <svg aria-hidden="true" focusable="false" width="32" height="32" fill="none"
+                <svg aria-hidden="true" focusable="false" width="17" height="16" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0 16C0 7.1634 7.1634 0 16 0s16 7.1634 16 16-7.1634 16-16 16S0 24.8366 0 16z"
-                    fill="#FF2F64" />
                   <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M9.1667 9.25a.6667.6667 0 0 0 0 1.3333h1.7712l.4675 2.3354a.656.656 0 0 0 .0106.0531l.9674 4.8334.0001.0005a1.8255 1.8255 0 0 0 1.8183 1.4691h5.6207a1.8256 1.8256 0 0 0 1.8185-1.4696l.001-.005.9271-4.8615a.6668.6668 0 0 0-.6549-.7915h-9.3035l-.4726-2.3614a.6667.6667 0 0 0-.6537-.5358H9.1667zm4.5243 8.2944l-.8134-4.0639h8.2308l-.7756 4.0669a.4922.4922 0 0 1-.4918.3942v-.0001H14.1961v-.0001l-.0127.0002a.4926.4926 0 0 1-.4922-.3962l-.0002-.001zm-1.1336 3.961c0-.6879.5577-1.2457 1.2457-1.2457.6879 0 1.2457.5578 1.2457 1.2457 0 .688-.5578 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457zm6.3733 0c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457z"
-                    fill="#FCFCFC" /></svg>
+                    d="M1.313.49a.667.667 0 0 0 0 1.333h2.06l.54 2.696a.662.662 0 0 0 .011.056l1.09 5.44a1.97 1.97 0 0 0 1.962 1.586h6.325a1.97 1.97 0 0 0 1.963-1.586l.001-.005 1.043-5.47a.667.667 0 0 0-.655-.791H5.12l-.545-2.724A.667.667 0 0 0 3.92.49H1.313zM6.32 9.754l-.935-4.672h9.462l-.892 4.675a.637.637 0 0 1-.636.51H6.958a.637.637 0 0 1-.637-.512v-.001zm-1.11 4.44a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0zm7.17 0a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0z"
+                    fill="#2D3440" /></svg>
+                <span class="visually-hidden">Положить в корзину</span>
               </button>
             </div>
           </li>
@@ -335,13 +350,12 @@
               <p>Ванильный пломбир со сладкой посыпкой</p>
               <b class="text-norm">320 ₽/кг</b>
               <button class="assortment-button" type="button">
-                <svg aria-hidden="true" focusable="false" width="32" height="32" fill="none"
+                <svg aria-hidden="true" focusable="false" width="17" height="16" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <path d="M0 16C0 7.1634 7.1634 0 16 0s16 7.1634 16 16-7.1634 16-16 16S0 24.8366 0 16z"
-                    fill="#FF2F64" />
                   <path fill-rule="evenodd" clip-rule="evenodd"
-                    d="M9.1667 9.25a.6667.6667 0 0 0 0 1.3333h1.7712l.4675 2.3354a.656.656 0 0 0 .0106.0531l.9674 4.8334.0001.0005a1.8255 1.8255 0 0 0 1.8183 1.4691h5.6207a1.8256 1.8256 0 0 0 1.8185-1.4696l.001-.005.9271-4.8615a.6668.6668 0 0 0-.6549-.7915h-9.3035l-.4726-2.3614a.6667.6667 0 0 0-.6537-.5358H9.1667zm4.5243 8.2944l-.8134-4.0639h8.2308l-.7756 4.0669a.4922.4922 0 0 1-.4918.3942v-.0001H14.1961v-.0001l-.0127.0002a.4926.4926 0 0 1-.4922-.3962l-.0002-.001zm-1.1336 3.961c0-.6879.5577-1.2457 1.2457-1.2457.6879 0 1.2457.5578 1.2457 1.2457 0 .688-.5578 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457zm6.3733 0c0-.6879.5577-1.2457 1.2457-1.2457.688 0 1.2457.5578 1.2457 1.2457 0 .688-.5577 1.2457-1.2457 1.2457-.688 0-1.2457-.5577-1.2457-1.2457z"
-                    fill="#FCFCFC" /></svg>
+                    d="M1.313.49a.667.667 0 0 0 0 1.333h2.06l.54 2.696a.662.662 0 0 0 .011.056l1.09 5.44a1.97 1.97 0 0 0 1.962 1.586h6.325a1.97 1.97 0 0 0 1.963-1.586l.001-.005 1.043-5.47a.667.667 0 0 0-.655-.791H5.12l-.545-2.724A.667.667 0 0 0 3.92.49H1.313zM6.32 9.754l-.935-4.672h9.462l-.892 4.675a.637.637 0 0 1-.636.51H6.958a.637.637 0 0 1-.637-.512v-.001zm-1.11 4.44a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0zm7.17 0a1.318 1.318 0 1 1 2.636 0 1.318 1.318 0 0 1-2.637 0z"
+                    fill="#2D3440" /></svg>
+                <span class="visually-hidden">Положить в корзину</span>
               </button>
             </div>
           </li>
@@ -397,7 +411,7 @@
                 <label class="visually-hidden" for="mail-email">Email</label>
                 <input class="field" placeholder="email@example.com" type="email" name="email" id="mail-email" required>
               </p>
-              <span class="button-pink-wrap">
+              <span class="button-pink-wrap button-mailing-email">
                 <button class="mailing-button button-pink" type="submit">
                   <span>Отправить</span>
                 </button>
@@ -444,7 +458,7 @@
               <input class="field" type="text" id="form-label-adress" name="adress"
                 placeholder="ул. Большая Конюшенная, 19/8">
             </p>
-            <span class="button-pink-wrap link-form-wrap">
+            <span class="button-pink-wrap link-form-wrap delivery-button">
               <button class="link-form button button-pink" type="submit"><span>Отправить</span></button>
             </span>
           </form>
@@ -460,29 +474,32 @@
           <p class="contacts-time">(с 10 до 20 ежедневно)</p>
           <span class="button-pink-wrap"><button class="button button-pink" type="button">Форма обратной
               связи</button></span>
+          <div class="modal-feedback modal">
+            <form class="feedback-wrap" action="https://echo.htmlacademy.ru/" method="POST">
+              <span class="feedback-text presents-item-title">Мы обязательно ответим вам!</span>
+              <p class="feedback-mailing">
+                <label class="visually-hidden" for="name">Имя и фамилия</label>
+                <input class="field" placeholder="Имя и фамилия" type="text" name="name" id="name">
+              </p>
+              <p class="feedback-mailing">
+                <label class="visually-hidden" for="feed-mail-email">Email</label>
+                <input class="field" placeholder="email@example.com" type="email" name="email" id="feed-mail-email"
+                  required>
+              </p>
+              <p class="feedback-mailing">
+                <label class="visually-hidden" for="free-field">Свободное поле</label>
+                <textarea class="field" placeholder="В свободной форме" rows="5" name="free-field"
+                  id="free-field"></textarea>
+              </p>
+              <span class="button-pink-wrap link-form-wrap"><button class="link-form button button-pink"
+                  type="submit"><span>Отправить</span></button></span>
+              <button type="button" class="feedback-close modal-assortment-button"><span class="visually-hidden">Закрыть
+                  окно</span></button>
+            </form>
+          </div>
         </div>
       </section>
     </main>
-    <div class="modal-feedback modal">
-      <form class="feedback-wrap" action="https://echo.htmlacademy.ru/" method="POST">
-        <span class="feedback-text presents-item-title">Мы обязательно ответим вам!</span>
-        <p class="feedback-mailing">
-          <label class="visually-hidden" for="name">Имя и фамилия</label>
-          <input class="field" placeholder="Имя и фамилия" type="text" name="name" id="name">
-        </p>
-        <p class="feedback-mailing">
-          <label class="visually-hidden" for="feed-mail-email">Email</label>
-          <input class="field" placeholder="email@example.com" type="email" name="email" id="feed-mail-email" required>
-        </p>
-        <p class="feedback-mailing">
-          <label class="visually-hidden" for="free-field">Свободное поле</label>
-          <textarea class="field" placeholder="В свободной форме" rows="5" name="free-field" id="free-field"></textarea>
-        </p>
-        <span class="button-pink-wrap link-form-wrap"><button class="link-form button button-pink"
-            type="submit"><span>Отправить</span></button></span>
-        <button type="button" class="feedback-close modal-assortment-button"></button>
-      </form>
-    </div>
     <footer class="page-footer">
       <section class="social">
         <h3 class="visually-hidden">Соцсети</h3>
@@ -538,15 +555,15 @@
       </section>
       <section class="copyright">
         <h3 class="visually-hidden">Копирайт</h3>
-        <a class="copyright-link" href="#">
+        <a class="copyright-link" href="https://htmlacademy.ru/">
           <img class="copyright-image" src="images/vector/logo_htmlacademy.svg" width="93" height="27"
             alt=".html academy">
+          <span class="visually-hidden">Сайт HTML Academy</span>
         </a>
         <p>Сделано в <a href="#">.html academy</a> © 2021</p>
       </section>
     </footer>
   </div>
 </body>
-
 
 </html>
