--- a/catalog.html
+++ b/catalog.html
@@ -521,7 +521,7 @@
         <h3 class="visually-hidden">Соцсети</h3>
         <ul class="social-list reset-list">
           <li class="social-item">
-            <a class="button-social" href="#">
+            <a class="button-social" href="https://vk.com/htmlacademy">
               <svg class="social-icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -532,7 +532,7 @@
             </a>
           </li>
           <li class="social-item">
-            <a class="button-social" href="#">
+            <a class="button-social" href="https://www.facebook.com/htmlacademy">
               <svg class="social-icon" aria-hidden="true" focusable="false" width="24" height="24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -542,7 +542,7 @@
             </a>
           </li>
           <li class="social-item">
-            <a class="button-social" href="#">
+            <a class="button-social" href="https://www.instagram.com/htmlacademy/">
               <svg class="social-icon" aria-hidden="true" focusable="false" width="24" height="24" viewBox="0 0 24 24"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -576,7 +576,7 @@
             alt=".html academy">
           <span class="visually-hidden">Сайт HTML Academy</span>
         </a>
-        <p>Сделано в <a href="#">.html academy</a> © 2021</p>
+        <p>Сделано в <a href="https://htmlacademy.ru/">.html academy</a> © 2021</p>
       </section>
     </footer>
   </div>
